@@ -312,3 +312,6 @@ unreleased Version 0.3.26
   * single file compilation: avoid relinking every time
   * seperate compile and link: no longer trashes dependencies in link step
   * goto definition, search symbol: now line number adjusted according to changes since last successful build
+  * fix: resource files in sub folders would not build because the same folders were expected in the intermediate directory
+  * global settings: split page into directories/settings pages to make option "Show build time" accessible
+  * global settings: added option to disable sorting projects
